--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-  {
+{
   "name": "root",
   "private": true,
   "workspaces": [
@@ -6,12 +6,11 @@
   ],
   "scripts": {
     "dev": "start-storybook -p 5555",
-    "build": "lerna exec --parallel -- babel --root-mode upward src -d lib --ignore **/*.story.js,**/*.spec.js",
+    "build": "lerna exec --parallel -- webpack src/index.js -o lib/index.js",
     "coverage": "jest --coverage",
     "unit": "jest"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
     "@babel/preset-react": "^7.8.3",
@@ -29,6 +28,7 @@
     "react-dom": "^16.13.0",
     "react-test-renderer": "^16.13.0",
     "styled-components": "^5.0.1",
-    "webpack": "^4.42.0"
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11"
   }
 }
